--- a/pgrokd/web/index.html
+++ b/pgrokd/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pgrok.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>专注内网穿透</title>
+    <title>免费的内网穿透</title>
   </head>
   <body class="h-full">
     <div id="root"></div>
